--- a/styles/global.css
+++ b/styles/global.css
@@ -80,7 +80,20 @@ a {
   color: inherit;
 }
 
-/* Remove o style do ul, mas garante que continue sendo uma lista */
+/* Applying gradient to link texts */
+a:hover {
+  background: linear-gradient(
+    90deg,
+    var(--brand-color-secondary) 0%,
+    var(--brand-color-primary) 100%
+  );
+
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
+
+/* Removes the style of ul, but ensures it remains a list */
 ul[role='list'] {
   list-style: none;
 }
