--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -26,6 +26,10 @@
     var(--brand-color-primary) 100%
   );
   --btn-color: var(--surface-color);
+
+  -webkit-background-clip: initial;
+  background-clip: initial;
+  color: var(--btn-color);
 }
 
 .btn-sm {
@@ -59,5 +63,16 @@
     background-clip: text;
     color: transparent;
     position: relative;
+  }
+}
+
+@media (min-width: 80em) {
+  .btn-sm {
+    padding: 0.75rem 1.5rem;
+    font-size: var(--fs-base);
+  }
+  .btn-md {
+    padding: 1rem 2rem;
+    font-size: 1.125rem;
   }
 }
