--- a/styles/index.css
+++ b/styles/index.css
@@ -6,3 +6,6 @@
 @import url(hero.css);
 @import url(sections.css);
 @import url(about.css);
+@import url(cards.css);
+/* O features.css só será importado se a largura for maior ou igual a 80rem */
+@import url(features.css) (width >= 80rem);
