--- a/styles/index.css
+++ b/styles/index.css
@@ -9,3 +9,4 @@
 @import url(cards.css);
 /* O features.css só será importado se a largura for maior ou igual a 80rem */
 @import url(features.css) (width >= 80rem);
+@import url(pricing.css);
