--- a/styles/index.css
+++ b/styles/index.css
@@ -10,3 +10,4 @@
 /* O features.css só será importado se a largura for maior ou igual a 80rem */
 @import url(features.css) (width >= 80rem);
 @import url(pricing.css);
+@import url(dowload.css);
